@@ -1,5 +1,6 @@
 Changes for 1.8.3
 
+ - [ZBX-2285] fixed sending of active items multiple times (asaveljevs,Sasha)
  - [ZBX-2266] fixed server crash when processing malformed calculated items (asaveljevs)
  - [ZBX-1346] use single quotes in example frontend configuration file (Richlv)
  - [ZBX-2274] fixed trigger expression corruption with trigger wizard (AM)
